Remove unused imports being generated in code generator and add coverage
Signed-off-by: Chris Jackson <chris@cd-jackson.com>